--- a/tacc_stats_web/templates/tacc_stats/job_detail.html
+++ b/tacc_stats_web/templates/tacc_stats/job_detail.html
@@ -9,6 +9,8 @@
     <img src="/tacc_stats/job_mem_heatmap/{{job.acct_id}}" alt="Job Memory Heatmap" />
 
     <img src="/tacc_stats/job_files_opened_heatmap/{{job.acct_id}}" alt="Files Opened Heatmap" />
+    
+    <img src="/tacc_stats/job_flops_heatmap/{{job.acct_id}}" alt="Flops Performed Heatmap" />
 
     <h2>Accounting Details</h2>
     <table border="1" cellpadding="5">
