added scatterplot and kmeans clustering

--- a/tacc_stats_web/templates/tacc_stats/index.html
+++ b/tacc_stats_web/templates/tacc_stats/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 <h1>TACC Stats Web Home</h1>
-<a href="search">jobsearch</a>
+<a href="search">jobsearch</a></br>
+<a href="plot">jobclustering</a><br>
 
 <h2> Charts at a glance </h2>
 
